# cxx-module-examples

./: .clang-format  .gitignore  README.md
1.cxx_std_module/: CMakeLists.txt  main.cpp
1.cxx_std_module/scripts/: clang_build.sh  cmake_clang_build_with_llvm_toolchain.sh  gcc_build.sh
2.my_own_module/: CMakeLists.txt  main.cpp  mymod.cppm
3.with_old_header/: CMakeLists.txt  main.cpp
3.with_old_header/src/: oldman.cppm  oldman.h
4.split_implementation/: CMakeLists.txt  main.cpp
4.split_implementation/scripts/: clean.sh
4.split_implementation/src/: bob.cpp  children.cpp  family.cppm  parent.cpp
5.module_partition/: CMakeLists.txt  main.cpp
5.module_partition/src/: game.cppm
5.module_partition/src/game/: core.cppm  input.cppm  math.cppm  mixer.cppm  renderer.cppm
scripts/: clean_all.sh  cmake_clang_build_all.sh  cmake_clang_build_all_with_llvm_toolchain.sh  cmake_gcc_build_all.sh
